--- a/demo/helloword/html/home/index.html
+++ b/demo/helloword/html/home/index.html
@@ -1,14 +1,13 @@
 <!--XO Page Layout-->
-<article id="xoview-home-index" class="xo_page">
-    <div class="xo_page_inner">
+<article id="xoview-home-index" class="xpage">
+    <div class="xpage_inner">
         <!--S header-->
-        <header class="navbar navbar-default navbar-static-top" role="banner">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#home">XO WebApp Framework</a>
-            </div>
+        <header class="bar bar-nav" role="banner">
+            <a href="#about" class="icon icon-info pull-right"></a>
+            <h1 class="title">XO MALL</h1>
         </header>
         <!--E header-->
-        <section class="xo_section xo_scroll current">
+        <section class="content current">
 
             <!--S 页面内容-->
             <div id="J_bd1_scroll" class="mod_carousel sy_carousel">
@@ -31,26 +30,23 @@
                 </div>
             </div>
 
-            <div class="sy_tel bg1">
+            <div class="sy_tel">
                 24小时客服热线：<a href="tel:4007000808">400-700-0808</a>
             </div>
 
-            <div class="sy_nav">
-                <a href="#home/page1">
-                    <i class="ico_search"></i>
-                    <strong>搜索</strong>
-                <a href="#home/page2">
-                    <i class="ico_browser"></i>
-                    <strong>浏览</strong>
-                <a href="#mall">
-                    <i class="ico_fav"></i>
-                    <strong>易迅商城</strong>
-                <a>
-                    <i class="ico_account"></i>
-                    <strong>账户</strong>
-                <a href="#about">
-                    <i class="ico_about"></i>
-                    <strong>关于XO</strong>
+            <div class="tablist">
+                <a class="tabitem" href="#home/page1">
+                    <i class="tabicon icon icon-search"></i>
+                    <span class="tabtitle">搜索</span>
+                <a class="tabitem" href="#home/page2">
+                    <i class="tabicon icon icon-list"></i>
+                    <span class="tabtitle">浏览</span>
+                <a class="tabitem" href="#mall">
+                    <i class="tabicon icon icon-star-filled"></i>
+                    <span class="tabtitle">商城</span>
+                <a class="tabitem">
+                    <i class="tabicon icon icon-person"></i>
+                    <span class="tabtitle">账户</span>
                 </a>
             </div>
             <!--E 页面内容-->
