--- a/demo/helloword/html/home/page1.html
+++ b/demo/helloword/html/home/page1.html
@@ -1,53 +1,50 @@
 <!--搜索页-->
-<article id="xoview-home-page1" class="xo_page">
-    <div class="xo_page_inner">
+<article id="xoview-home-page1" class="xpage">
+    <div class="xpage_inner">
         <!--S header-->
-        <header class="navbar navbar-default navbar-static-top" role="banner">
-            <div class="mod_search_form">
-                <input type="input" />
-                <button type="button" data-back="home" class="bg1 b_back1">取消</button>
-            </div>
+        <header class="bar bar-nav" role="banner">
+            <h1 class="title">搜索</h1>
+            <a href="#home" data-back="home" class="btn btn-link btn-nav pull-left"><span class="icon icon-left-nav"></span>返回</a>
         </header>
+        <div class="bar bar-standard bar-header-secondary">
+            <form>
+                <input type="search" placeholder="请输入搜索关键字"/>
+            </form>
+        </div>
         <!--E header-->
-        <section class="xo_section xo_scroll current">
-            <div class="mod_search_list">
-                <div class="mod_list mod_photo sh_list">
-                    <a href="#home/page5" class="mod_list_item">
-                        <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
-                        <div class="mod_list_info">
-                            <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
-                            <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
-                        </div>
-                    </a>
-                    <a href="#home/page5" class="mod_list_item">
-                        <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
-                        <div class="mod_list_info">
-                            <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
-                            <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
-                        </div>
-                    </a>
-                    <a href="#home/page5" class="mod_list_item">
-                        <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
-                        <div class="mod_list_info">
-                            <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
-                            <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
-                        </div>
-                    </a>
-                    <a href="#home/page5" class="mod_list_item">
-                        <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
-                        <div class="mod_list_info">
-                            <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
-                            <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
-                        </div>
-                    </a>
-                    <a href="#home/page5" class="mod_list_item">
-                        <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
-                        <div class="mod_list_info">
-                            <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
-                            <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
-                        </div>
-                    </a>
-                </div>
+        <section class="content current">
+
+            <div class="content-padded">
+                <ul class="table-view">
+                    <li class="table-view-cell table-view-divider">搜索结果：</li>
+                    <li class="table-view-cell media">
+                        <a href="#home/page5" class="navigate-right">
+                            <img class="media-object pull-left" src="demo/helloword/img/80x80.gif"/>
+                            <div class="media-body">
+                                <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
+                                <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="table-view-cell media">
+                        <a href="#home/page5" class="navigate-right">
+                            <img class="media-object pull-left" src="demo/helloword/img/80x80.gif"/>
+                            <div class="media-body">
+                                <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
+                                <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="table-view-cell media">
+                        <a href="#home/page5" class="navigate-right">
+                            <img class="media-object pull-left" src="demo/helloword/img/80x80.gif"/>
+                            <div class="media-body">
+                                <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
+                                <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </section>
     </div>
