--- a/demo/helloword/html/home/page2.html
+++ b/demo/helloword/html/home/page2.html
@@ -1,39 +1,44 @@
 <!--页面框架:一级浏览页-->
-<article id="xoview-home-page2" class="xo_page">
+<article id="xoview-home-page2" class="xpage">
 
-    <div class="xo_page_inner">
+    <div class="xpage_inner">
         <!--S header-->
-        <header class="navbar navbar-default navbar-static-top" role="banner">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#home/page2">产品浏览</a>
-            </div>
-            <a href="#home" data-back="home" class="navbar-btn pull-left"><span class="b_back"></span></a>
+        <header class="bar bar-nav" role="banner">
+            <a href="#home" data-back="home" class="btn btn-link btn-nav pull-left"><span class="icon icon-left-nav"></span>返回</a>
+            <h1 class="title">产品浏览</h1>
         </header>
         <!--E header-->
-        <section class="xo_section xo_scroll current">
-
-            <div class="mod_list mod_photo sb_list">
-                <a href="#home/page3" class="mod_list_item">
-                    <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
-                    <div class="mod_list_info">
-                        <h3>充值服务</h3>
-                        <p>话费/Q币/网游/彩票/电影票</p>
-                    </div>
-                </a>
-                <a href="#home/page3" class="mod_list_item">
-                    <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
-                    <div class="mod_list_info">
-                        <h3>手机/笔记本</h3>
-                        <p>手机/平板/电脑/硬件</p>
-                    </div>
-                </a>
-                <a href="#home/page3" class="mod_list_item">
-                    <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
-                    <div class="mod_list_info">
-                        <h3>数码家电</h3>
-                        <p>摄影/影音/存储/外设</p>
-                    </div>
-                </a>
+        <section class="content current">
+            <div class="content-padded">
+                <ul class="table-view">
+                    <li class="table-view-cell media">
+                        <a href="#home/page3" class="navigate-right">
+                            <img class="media-object pull-left" src="demo/helloword/img/80x80.gif"/>
+                            <div class="media-body">
+                                <h3>充值服务</h3>
+                                <p>话费/Q币/网游/彩票/电影票</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="table-view-cell media">
+                        <a href="#home/page3" class="navigate-right">
+                            <img class="media-object pull-left" src="demo/helloword/img/80x80.gif"/>
+                            <div class="media-body">
+                                <h3>手机/笔记本</h3>
+                                <p>手机/平板/电脑/硬件</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="table-view-cell media">
+                        <a href="#home/page3" class="navigate-right">
+                            <img class="media-object pull-left" src="demo/helloword/img/80x80.gif"/>
+                            <div class="media-body">
+                                <h3>数码家电</h3>
+                                <p>摄影/影音/存储/外设</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
 
         </section>
