--- a/demo/helloword/html/home/page4.html
+++ b/demo/helloword/html/home/page4.html
@@ -1,53 +1,47 @@
 <!--页面框架：列表页头部-->
-<article id="xoview-home-page4" class="xo_page">
+<article id="xoview-home-page4" class="xpage">
 
-    <div class="xo_page_inner">
+    <div class="xpage_inner">
         <!--S header-->
-        <header class="navbar navbar-default navbar-static-top" role="banner">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#home/page4">产品列表</a>
-            </div>
-            <a href="#home/page3" data-back="home/page3" class="navbar-btn pull-left"><span class="b_back"></span></a>
+        <header class="bar bar-nav" role="banner">
+            <h1 class="title">产品列表</h1>
+            <a href="#home/page3" data-back="home/page3" class="btn btn-link btn-nav pull-left"><span class="icon icon-left-nav"></span>返回</a>
         </header>
         <!--E header-->
-        <section class="xo_section xo_scroll current">
-            <div class="mod_list mod_photo sh_list">
-                <a href="#home/page5" class="mod_list_item">
-                    <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
-                    <div class="mod_list_info">
-                        <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
-                        <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
-                    </div>
-                </a>
-                <a href="#home/page5" class="mod_list_item">
-                    <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
-                    <div class="mod_list_info">
-                        <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
-                        <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
-                    </div>
-                </a>
-                <a href="#home/page5" class="mod_list_item">
-                    <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
-                    <div class="mod_list_info">
-                        <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
-                        <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
-                    </div>
-                </a>
-                <a href="#home/page5" class="mod_list_item">
-                    <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
-                    <div class="mod_list_info">
-                        <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
-                        <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
-                    </div>
-                </a>
-                <a href="#home/page5" class="mod_list_item">
-                    <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
-                    <div class="mod_list_info">
-                        <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
-                        <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
-                    </div>
-                </a>
+        <section class="content current">
+            
+            <div class="content-padded">
+                <ul class="table-view">
+                    <li class="table-view-cell media">
+                        <a href="#home/page5" class="navigate-right">
+                            <img class="media-object pull-left" src="demo/helloword/img/80x80.gif"/>
+                            <div class="media-body">
+                                <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
+                                <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="table-view-cell media">
+                        <a href="#home/page5" class="navigate-right">
+                            <img class="media-object pull-left" src="demo/helloword/img/80x80.gif"/>
+                            <div class="media-body">
+                                <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
+                                <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="table-view-cell media">
+                        <a href="#home/page5" class="navigate-right">
+                            <img class="media-object pull-left" src="demo/helloword/img/80x80.gif"/>
+                            <div class="media-body">
+                                <h3>philips 飞利浦 spfi127/93 7英寸数码相框 白色</h3>
+                                <p class="mod_price"><span class="c_tx1">&yen;250</span><span>市场价：&yen;300</span></p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
+
         </section>
     </div>
 </article>
