--- a/demo/helloword/html/mall/index.html
+++ b/demo/helloword/html/mall/index.html
@@ -1,8 +1,13 @@
 <!--页面框架-->
-<article id="xoview-mall-index" class="xo_page page_mall_index">
-    <div class="xo_page_inner">
+<article id="xoview-mall-index" class="xpage page_mall_index">
+    <div class="xpage_inner">
         <!--S header-->
-        <header class="navbar navbar-default navbar-static-top" role="banner">
+        <header class="bar bar-nav" role="banner">
+            <h1 class="title">精选商城</h1> 
+            <a href="#home" data-back="home" class="btn btn-link btn-navpull-left"><span class="icon icon-left-nav"></span>返回</a>
+        </header>
+        
+        <div class="bar bar-standard bar-header-secondary">
             <nav data-plugin="menu" data-plugin-id="menu-top" class="mod_nav">
                 <div class="mod_nav_outer">
                     <div class="mod_nav_inner">
@@ -19,38 +24,19 @@
                     </div>
                 </div>
             </nav>
-            <!--div class="demo_item_bd" style="padding:0;">
-                <div class="row">
-                    <div class="mod_bar" style="margin-top:15px;">
-                        <div class="mod_bar_back"><a href="#"><i></i></a></div>
-                        <div class="mod_bar_center">
-                            <ul class="mod_bar_tab" id="J_nav">
-                                <li class="current"><span>商品</span></li>
-                                <li><span>详情</span></li>
-                                <li><span>评价</span></li>
-                                <li><span>参数</span></li>
-                            </ul>
-                        </div>
-                     </div>
-                </div>
-             </div-->
+ 
+        </div>
 
-
-
-
-
-            <a href="#page/home" data-back="page/home" class="navbar-btn btn_back pull-left">&lt;&lt;返回</a>
-        </header>
         <!--E header-->
         <div class="card" id="card" data-max="2" data-min="-2" data-plugin="swipeview" data-plugin-id="swiper">
-            <section class="xo_section xo_scroll view_1" data-plugin="loadmore" data-plugin-id="pager-1">
+            <section class="xsection xscroll view_1" data-plugin="loadmore" data-plugin-id="pager-1">
                 <div class="pager">5555</div>
             </section>
-            <section class="xo_section xo_scroll view_2" data-plugin="loadmore" data-plugin-id="pager-2">
+            <section class="xsection xscroll view_2" data-plugin="loadmore" data-plugin-id="pager-2">
                 <div class="pager">
                     <div class="mod_more"><i></i><a href="#">向上拖动加载更多！</a></div>
                     <a href="#" class="mod_goods">
-                        <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
+                        <div class="mod_goods_photo"><img src="demo/helloword/img/mall/item.jpg" alt="图片名称" /></div>
                         <div class="mod_goods_info">
                             <h4>ThinkPad yoga 12.5英寸超级本</h4>
                             <p>金属机壳感妖艳的360度旋转屏幕</p>
@@ -60,7 +46,7 @@
                     </a>
 
                     <a href="#" class="mod_goods">
-                        <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
+                        <div class="mod_goods_photo"><img src="demo/helloword/img/mall/item.jpg" alt="图片名称" /></div>
                         <div class="mod_goods_info">
                             <h4>ThinkPad yoga 12.5英寸超级本</h4>
                             <p>金属机壳感妖艳的360度旋转屏幕</p>
@@ -70,7 +56,7 @@
                     </a>
 
                     <a href="#" class="mod_goods">
-                        <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
+                        <div class="mod_goods_photo"><img src="demo/helloword/img/mall/item.jpg" alt="图片名称" /></div>
                         <div class="mod_goods_info">
                             <h4>ThinkPad yoga 12.5英寸超级本</h4>
                             <p>金属机壳感妖艳的360度旋转屏幕</p>
@@ -80,7 +66,7 @@
                     </a>
 
                     <a href="#" class="mod_goods">
-                        <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
+                        <div class="mod_goods_photo"><img src="demo/helloword/img/mall/item.jpg" alt="图片名称" /></div>
                         <div class="mod_goods_info">
                             <h4>ThinkPad yoga 12.5英寸超级本</h4>
                             <p>金属机壳感妖艳的360度旋转屏幕</p>
@@ -90,7 +76,7 @@
                     </a>
 
                     <a href="#" class="mod_goods">
-                        <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
+                        <div class="mod_goods_photo"><img src="demo/helloword/img/mall/item.jpg" alt="图片名称" /></div>
                         <div class="mod_goods_info">
                             <h4>ThinkPad yoga 12.5英寸超级本</h4>
                             <p>金属机壳感妖艳的360度旋转屏幕</p>
@@ -100,7 +86,7 @@
                     </a>
                 </div>
             </section>
-            <section class="xo_section xo_scroll view_3" data-plugin="loadmore" data-plugin-id="pager-3">
+            <section class="xsection xscroll view_3" data-plugin="loadmore" data-plugin-id="pager-3">
                 <div class="pager">6666</div>
             </section>
         </div>
