--- a/demo/helloword/html/about/index.html
+++ b/demo/helloword/html/about/index.html
@@ -1,24 +1,24 @@
-<article id="xoview-about-index" class="xo_page">
-    <div class="xo_page_inner">
+<article id="xoview-about-index" class="xpage">
+    <div class="xpage_inner">
         <!--S header-->
-        <header class="navbar navbar-default navbar-static-top" role="banner">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#about">XO WAF <span id="J_version"></span></a>
-            </div>
-            <a href="#home" data-back="home" class="navbar-btn pull-left"><span class="b_back"></span></a>
+        <header class="bar bar-nav" role="banner">
+            <a href="#home" data-back="home" class="btn btn-link btn-nav pull-left"><span class="icon icon-left-nav"></span>返回</a>
+            <h1 class="title">
+                XO WAF <span id="J_version"></span>
+            </h1>
         </header>
         <!--E header-->
-        <section class="xo_section xo_scroll current">
-            <div class="container">
-                <div class="page-header"><h1>概述</h1></div>
+        <section class="content current">
+            <div class="content-padded">
+                <h3>概述</h3>
                 <p class="lead">XO是为构建WebApp而设计的前端MVC框架。</p>
                 <p>如果你熟悉Backbone框架，使用XO将变得熟悉而简单。因为XO的URL路由控制器的实现参考自Backbone.Router，视图的实现则参考自Backbone.View，附带一系列常用的视图转换效果。</p>
                 <p>XO使用<a href="http://zeptojs.com" target="_blank">Zepto</a>作为Dom库，并推荐<a href="http://twitter.github.io/hogan.js/" target="_blank">Hogan</a>作为模板引擎。</p>
                 <p>当然你可以重写XO.toHtml方法从而使用你自己喜爱的模板引擎，<a href="http://mustache.github.com" target="_blank">mustache</a>也是不错的选择。</p>
                 <p>
-                    <iframe src="http://ghbtns.com/github-btn.html?user=oxox&amp;repo=xo&amp;type=watch" allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20"></iframe>
-                    <iframe src="http://ghbtns.com/github-btn.html?user=oxox&amp;repo=xo&amp;type=fork" allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20"></iframe>
-                    <iframe src="http://ghbtns.com/github-btn.html?user=oxox&amp;type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="132" height="20"></iframe>
+                    <iframe src="http://ghbtns.com/github-btn.html?user=xsin&amp;repo=xo&amp;type=watch" allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20"></iframe>
+                    <iframe src="http://ghbtns.com/github-btn.html?user=xsin&amp;repo=xo&amp;type=fork" allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20"></iframe>
+                    <iframe src="http://ghbtns.com/github-btn.html?user=xsin&amp;type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="132" height="20"></iframe>
                 </p>
             </div>
         </section>
