--- a/demo/helloword/html/home/page3.html
+++ b/demo/helloword/html/home/page3.html
@@ -1,51 +1,37 @@
 <!--页面框架:二级浏览页-->
-<article id="xoview-home-page3" class="xo_page">
-    <div class="xo_page_inner">
+<article id="xoview-home-page3" class="xpage">
+    <div class="xpage_inner">
         <!--S header-->
-        <header class="navbar navbar-default navbar-static-top" role="banner">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#home/page3">数码家电</a>
-            </div>
-            <a href="#home/page2" data-back="home/page2" class="navbar-btn pull-left"><span class="b_back"></span></a>
+        <header class="bar bar-nav" role="banner">
+            <a href="#home/page2" data-back="home/page2" class="btn btn-link btn-nav pull-left"><span class="icon icon-left-nav"></span>返回</a>
+            <h1 class="title">数码家电</h1>
         </header>
         <!--E header-->
-        <section class="xo_section xo_scroll current">
-            <div class="mod_list">
-                <a href="#home/page4" class="mod_list_item">
-                    <div class="mod_list_info">
-                        <h3>摄影摄像</h3>
-                    </div>
-                </a>
-                <a href="#home/page4" class="mod_list_item">
-                    <div class="mod_list_info">
-                        <h3>数码存储</h3>
-                    </div>
-                </a>
-                <a href="#home/page4" class="mod_list_item">
-                    <div class="mod_list_info">
-                        <h3>家用电器</h3>
-                    </div>
-                </a>
-                <a href="#home/page4" class="mod_list_item">
-                    <div class="mod_list_info">
-                        <h3>摄影配件</h3>
-                    </div>
-                </a>
-                <a href="#home/page4" class="mod_list_item">
-                    <div class="mod_list_info">
-                        <h3>音频设备</h3>
-                    </div>
-                </a>
-                <a href="#home/page4" class="mod_list_item">
-                    <div class="mod_list_info">
-                        <h3>网络设备</h3>
-                    </div>
-                </a>
-                <a href="#home/page4" class="mod_list_item">
-                    <div class="mod_list_info">
-                        <h3>配件服务</h3>
-                    </div>
-                </a>
+        <section class="content current">
+            <div class="content-padded">
+                <ul class="table-view">
+                    <li class="table-view-cell">
+                        <a href="#home/page4" class="navigate-right">摄影摄像</a>
+                    </li>
+                    <li class="table-view-cell">
+                        <a href="#home/page4" class="navigate-right">数码存储</a>
+                    </li>
+                    <li class="table-view-cell">
+                        <a href="#home/page4" class="navigate-right">家用电器</a>
+                    </li>
+                    <li class="table-view-cell">
+                        <a href="#home/page4" class="navigate-right">摄影配件</a>
+                    </li>
+                    <li class="table-view-cell">
+                        <a href="#home/page4" class="navigate-right">音频设备</a>
+                    </li>
+                    <li class="table-view-cell">
+                        <a href="#home/page4" class="navigate-right">网络设备</a>
+                    </li>
+                    <li class="table-view-cell">
+                        <a href="#home/page4" class="navigate-right">配件服务</a>
+                    </li>
+                </ul>
             </div>
         </section>
     </div>
