--- a/demo/helloword/html/home/page5.html
+++ b/demo/helloword/html/home/page5.html
@@ -1,16 +1,14 @@
 <!--页面框架：详情页头部-->
-<article id="xoview-home-page5" class="xo_page">
+<article id="xoview-home-page5" class="xpage">
 
-    <div class="xo_page_inner">
+    <div class="xpage_inner">
         <!--S header-->
-        <header class="navbar navbar-default navbar-static-top" role="banner">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#home/page5">产品详情</a>
-            </div>
-            <a href="#home/page4" data-back="home/page4" class="navbar-btn pull-left"><span class="b_back"></span></a>
+        <header class="bar bar-nav" role="banner">
+            <h1 class="title">产品详情</h1>
+            <a href="#home/page4" data-back="home/page4" class="btn btn-link btn-nav pull-left"><span class="icon icon-left-nav"></span>返回</a>
         </header>
         <!--E header-->
-        <section class="xo_section xo_scroll current">
+        <section class="content current">
 
             <div id="J_bd6_scroll" class="mod_carousel sd_carousel">
                 <div class="mod_carousel_photo">
@@ -64,18 +62,18 @@
             <div class="mod_list">
                 <a href="javascript:;" class="mod_list_item">
                     <div class="mod_list_info">
-                        <h3>查看详情</h3>
+                        <h4>查看详情</h4>
                     </div>
                 </a>
                 <a href="javascript:;" class="mod_list_item">
                     <div class="mod_list_info">
-                        <h3>商品属性</h3>
+                        <h4>商品属性</h4>
                         <p>品牌：飞扬空间</p>
                     </div>
                 </a>
                 <a href="javascript:;" class="mod_list_item">
                     <div class="mod_list_info">
-                        <h3>商品评论</h3>
+                        <h4>商品评论</h4>
                         <p>QQ网购用户 <span>2010-06-07</span></p>
                         <p>图形相符合，感觉很好，我很满意</p>
                     </div>
