--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <title>xo.js</title>
+    <title>XO.JS - Yep another webapp framework</title>
+    <link rel="stylesheet" href="src/css/ratchet.css" />
     <link rel="stylesheet" href="src/css/xo.css?v=20131209" />
-    <link rel="stylesheet" href="src/css/xo.bootstrap.css" />
     
     <link rel="stylesheet" href="demo/helloword/css/style.css" />
     <link rel="stylesheet" href="demo/helloword/css/menu.css" />
@@ -35,7 +35,7 @@
     <!--3party libs-->
     <script src="src/js/libs/iscroll.js"></script>
     <script src="src/js/libs/zepto.min.js"></script>
-    <script src="src/js/libs/hogan-2.0.0.js"></script>
+    <script src="src/js/libs/hogan-3.0.1.js"></script>
 
     <!--XO framework-->
     <script src="src/js/libs/fastclick.js"></script>
