--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <script src="src/js/modules/xo.plugin.js"></script>
     <script src="src/js/modules/xo.controller.js"></script>
     <script src="src/js/modules/xo.view.js"></script>
+    <script src="src/js/modules/xo.viewManager.js"></script>
     <script src="src/js/modules/xo.view.mask.js"></script>
     <script src="src/js/modules/xo.view.loader.js"></script>
     <script src="src/js/modules/xo.router.js"></script>
