--- a/demo/yxmall/html/home/guang.html
+++ b/demo/yxmall/html/home/guang.html
@@ -1,7 +1,6 @@
-<!--XO Page Layout-->
-<article id="xoview-home-guang" class="xo_page xo_page1">
-    <div class="xo_page_inner">
-        <section class="xo_section xo_scroll current">
+<article id="xoview-home-guang" class="xpage xpage1">
+    <div class="xpage_inner">
+        <section class="xsection xscroll current">
 
             <!--S 页面内容-->
             <div class="mod_page">
@@ -139,4 +138,3 @@
         </section>
     </div>
 </article>
-<!--页面框架-->
