--- a/demo/yxmall/html/search/index.html
+++ b/demo/yxmall/html/search/index.html
@@ -1,9 +1,8 @@
-<!--XO Page Layout-->
-<article id="xoview-search-index" class="xo_page page_search">
-    <div class="xo_page_inner">
+<article id="xoview-search-index" class="xpage page_search">
+    <div class="xpage_inner">
 
         <div class="mod_bar" >
-            <div class="mod_bar_back"><a href="#page/home"><i></i></a></div>
+            <div class="mod_bar_back"><a href="#home"><i></i></a></div>
 
             <div class="mod_search">
                 <div class="mod_search_bd">
@@ -16,7 +15,7 @@
 
         </div>
 
-        <section class="xo_section xo_scroll current">
+        <section class="xsection xscroll current">
 
             <!--S 页面内容-->
             <div class="mod_page search_result_page">
@@ -89,4 +88,3 @@
         </section>
     </div>
 </article>
-<!--页面框架-->
