--- a/demo/yxmall/html/home/pinpai.html
+++ b/demo/yxmall/html/home/pinpai.html
@@ -1,7 +1,6 @@
-<!--XO Page Layout-->
-<article id="xoview-home-pinpai" class="xo_page xo_page1 page_pinpai">
-    <div class="xo_page_inner">
-        <section class="xo_section xo_scroll current">
+<article id="xoview-home-pinpai" class="xpage xpage1 page_pinpai">
+    <div class="xpage_inner">
+        <section class="xsection xscroll current">
 
             <!--S 页面内容-->
             <div class="mod_page">
@@ -50,4 +49,3 @@
         </section>
     </div>
 </article>
-<!--页面框架-->
