--- a/demo/helloword/html/home/index.html
+++ b/demo/helloword/html/home/index.html
@@ -1,4 +1,3 @@
-<!--XO Page Layout-->
 <article id="xoview-home-index" class="xpage">
     <div class="xpage_inner">
         <!--S header-->
@@ -41,7 +40,7 @@
                 <a class="tabitem" href="#home/page2">
                     <i class="tabicon icon icon-list"></i>
                     <span class="tabtitle">浏览</span>
-                <a class="tabitem" href="#mall">
+                <a class="tabitem" href="/xo/demo/yxmall/">
                     <i class="tabicon icon icon-star-filled"></i>
                     <span class="tabtitle">商城</span>
                 <a class="tabitem">
@@ -54,4 +53,3 @@
         </section>
     </div>
 </article>
-<!--页面框架-->
