--- a/demo/helloword/html/home/index.html
+++ b/demo/helloword/html/home/index.html
@@ -40,7 +40,7 @@
                 <a class="tabitem" href="#home/page2">
                     <i class="tabicon icon icon-list"></i>
                     <span class="tabtitle">浏览</span>
-                <a class="tabitem" href="/xo/demo/yxmall/">
+                <a class="tabitem" href="http://xsin.in/xo/demo/yxmall/">
                     <i class="tabicon icon icon-star-filled"></i>
                     <span class="tabtitle">商城</span>
                 <a class="tabitem">
